Add Read.me and client script command from 'serve' to 'server' to be clear

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon server.js"
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "Standley Eugene <standleyeugene20@hotmail.com>",
