--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "Standley Eugene <standleyeugene20@hotmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
