--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.6.9",
     "mongoose-unique-validator": "^2.0.3",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "react-markdown": "^4.2.2"
   }
 }
